# coral-engine

./: .gitignore  Cargo.toml  README.md  coral.db
.cargo/: config.toml
CHANGELOG/: CHANGELOG.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INPUT_AND_UI.md  INPUT_SYSTEM_SPEC.md  LAYOUT_VIEWPORT_SPEC.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  ROADMAP.md  VOXEL_SYSTEM.md  WORLD_RENDER.md
src/: coordinator.rs  main.rs
src/common/: blocks.rs  constants.rs  face.rs  mod.rs
src/core/: camera.rs  cartesian.rs  config.rs  database.rs  input.rs  mod.rs  persist.rs  scene.rs  ui_router.rs
src/core/input/: action_map.rs  action_state.rs  actions.rs  context.rs  context_map.rs  input_manager.rs  key_modifiers.rs  keymap_persist.rs  mod.rs
src/entity/: mod.rs
src/game/: state.rs
src/ocean/: block.rs  bounds.rs  config.rs  mod.rs  registry.rs  render.rs  world.rs
src/physics/: mod.rs
src/render/: mesh.rs  mod.rs  pipeline.rs  state.rs  viewport_api.rs
src/terrain/: mod.rs  render.rs
src/ui/: block_panel.rs  editor.rs  keymap_editor.rs  layout_editor.rs  mod.rs  panel_visibility.rs  panels.rs  scene_panel.rs
src/ui/layout/: animation.rs  layout_state.rs  mod.rs  node_types.rs  panel_registry.rs  splitter.rs  viewport_manager.rs
